[gd_scene load_steps=3 format=2]

[ext_resource path="res://_tests/UI_control/Tabs.gd" type="Script" id=1]
[ext_resource path="res://_tests/UI_control/Tabs2.gd" type="Script" id=2]

[node name="Control" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="TabContainer" type="TabContainer" parent="Panel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 17.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
tab_align = 0
tabs_visible = true
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="Tabs" type="Tabs" parent="Panel/TabContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = 36.0
margin_bottom = 17.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
tab_align = 1
scrolling_enabled = true

[node name="Tabs2" type="Tabs" parent="Panel/TabContainer" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = 17.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
tab_align = 1
scrolling_enabled = true
script = ExtResource( 2 )

[connection signal="pre_popup_pressed" from="Panel/TabContainer" to="." method="_on_TabContainer_pre_popup_pressed"]

[connection signal="tab_changed" from="Panel/TabContainer" to="." method="_on_TabContainer_tab_changed"]

[connection signal="tab_selected" from="Panel/TabContainer" to="." method="_on_TabContainer_tab_selected"]

[connection signal="tab_clicked" from="Panel/TabContainer/Tabs" to="." method="_on_Tabs_tab_clicked"]

[connection signal="tab_close" from="Panel/TabContainer/Tabs" to="." method="_on_Tabs_tab_close"]

[connection signal="tab_hover" from="Panel/TabContainer/Tabs" to="." method="_on_Tabs_tab_hover"]

[connection signal="tab_clicked" from="Panel/TabContainer/Tabs2" to="Panel/TabContainer/Tabs2" method="_on_Tabs2_tab_clicked"]


